--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,7 +4,10 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="Content-Security-Policy" content="script-src 'self'">
 	<link rel="stylesheet" href="./main.css">
-	<title>Rocket.Chat</title>
+	<link rel="icon" type="image/x-icon" href="./images/icon.ico">
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+	<title>EVERJUST Chat</title>
 </head>
 <body style="background-color: #2f343d">
 	<div id="root"></div>
