--- a/src/public/video-call-window.html
+++ b/src/public/video-call-window.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
-    <title>Rocket.Chat</title>
+    	<link rel="icon" type="image/x-icon" href="./images/icon.ico">
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+	<title>EVERJUST Chat</title>
     <link rel="stylesheet" href="./main.css" />
     <style>
       webview {
